# yet_another_simulation

./: .gitignore  LICENSE  README.md  benchmark_search.py  checkpoint.sh  index.html  jsconfig.json  kb.py  package-lock.json  package.json  requirements.txt  script.js  style.css
inference_services/: .env.example  Procfile  pyproject.toml
inference_services/grpc_service/: neural_service_proto_stub.py
inference_services/http_service/: app.py
inference_services/inference_services.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
inference_services/python_onnx_service/: .env  app.py  main.py  pyproject.toml  requirements.txt
inference_services/python_onnx_service/grpc_service/: __main__.py
inference_services/python_onnx_service/scripts/: start_legacy_service.sh  start_neural_service.sh  start_neural_service_onnx.sh
sim_core/: Cargo.toml  NEAT_Tutorial.md  NEAT_Workflow_and_Parallelization.md  batch_sweep_mps_256.csv  build.rs
sim_core/.cargo/: config.toml
sim_core/analysis/: final_health.csv  health_trends.csv  match_details.csv
sim_core/docs/: onnx_minimal_export.md  onnx_prost_codegen_tutorial.md
sim_core/examples/: cpu_inference.rs  export_model.rs
sim_core/out_archive/: champion_gen_000.json  champion_gen_001.json  champion_gen_002.json  champion_gen_003.json  champion_gen_004.json  champion_gen_005.json  champion_gen_007.json  champion_gen_009.json  champion_gen_012.json  champion_gen_013.json  champion_gen_018.json  champion_gen_023.json  champion_gen_033.json  champion_gen_036.json  champion_gen_038.json  champion_gen_039.json  champion_gen_042.json  champion_gen_043.json  champion_gen_046.json  champion_gen_054.json  champion_gen_056.json  champion_gen_057.json  champion_gen_062.json  champion_gen_063.json  champion_gen_064.json  champion_gen_071.json  champion_gen_074.json  champion_gen_076.json  champion_gen_077.json  champion_gen_079.json  champion_gen_081.json  champion_gen_083.json  champion_gen_086.json  champion_gen_087.json  champion_gen_088.json  champion_gen_091.json  champion_gen_092.json  champion_gen_093.json  champion_gen_094.json  champion_gen_096.json  (+17 more)
sim_core/out_archive/2v2-30s/: champ_replay.jsonl  champion_gen_000.json  (+12 more)
sim_core/scripts/: analyze_replays.py  batch_size_sweep.sh  run_with_monitoring.sh  summarize_final_health.py  summarize_match_details.py
sim_core/src/: ai.rs  brain.rs  bullet.rs  combat.rs  config.rs  domain.rs  lib.rs  loot.rs  main.rs  movement.rs  wasm_bindings.rs
(+846 files in other folders)
