[project]
name = "inference_services"
version = "0.1.0"
description = "Python ONNX inference services"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.95.0",
    "uvicorn[standard]==0.22.0",
    "numpy",
    "onnxruntime",
    "pydantic",
    "python-dotenv",
    "grpcio",
]



[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["http_service*", "grpc_service*", "python_onnx_service*"]

[tool.setuptools.package-data]
"python_onnx_service" = ["model.onnx"]
