[package]
name = "sim_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3"
rand = "0.8"
serde_json = "1.0"
rayon = "1.8"
num_cpus = "1.16"
prost = "0.10"
prost-types = "0.10"
getrandom = { version = "0.2", features = ["js"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "4.0", features = ["derive"] }
rusqlite = "0.28"
indicatif = { version = "0.17", features = ["rayon"] }
console_error_panic_hook = "0.1.6"

[build-dependencies]
prost-build = "0.10"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
training = []

[[bin]]
name = "neat_train"
path = "src/main.rs"
